# microservice-feed

./: LICENSE  README.md
bad-side/: Dockerfile  main.py  pyproject.toml
bad_side/: Dockerfile  docker-compose.yaml  main.py  model.py  pyproject.toml  serealizers.py  teste.py
