[tool.poetry]
name = "bad_side"
version = "0.1.0"
description = ""
authors = ["Rodrigo Azevedo <rodrigozcma@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.2.0"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^2.7.0"
psycopg2-binary = "^2.8.6"
Flask-JSON = "^0.3.4"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.25.0"
marshmallow = "^3.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
